--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -45,12 +45,14 @@ $font-sans: "Karla", sans-serif;
 }
 
 // ------------------------------------------------------- xs --- sm --- md --- lg --- xl -- lsp -- lh ---- w --- style
+@mixin font-serif-xl  { @include font-style($font-serif,   52px,  52px,  52px,  52px,  52px,   0,   1.1em,  600,  normal); }
 @mixin font-serif-l   { @include font-style($font-serif,   24px,  24px,  24px,  24px,  24px,   0,   1.3em,  600,  normal); }
-@mixin font-serif-m   { @include font-style($font-serif,   17px,  17px,  17px,  17px,  17px,   0,   1.2em,  600,  normal); }
-@mixin font-sans-l    { @include font-style($font-sans,    27px,  27px,  27px,  27px,  27px,   0,   1.3em,  400,  normal); }
-@mixin font-sans-m    { @include font-style($font-sans,    14px,  14px,  14px,  14px,  14px,   0,   1.3em,  400,  normal); }
-@mixin font-sans-s    { @include font-style($font-sans,    10px,  10px,  10px,  10px,  10px,   0,   1.3em,  400,  normal); }
+@mixin font-serif-m   { @include font-style($font-serif,   17px,  17px,  17px,  17px,  17px,   0,   1.2em,  400,  normal); }
+@mixin font-sans-l    { @include font-style($font-sans,    27px,  27px,  27px,  27px,  27px,   0,   1.1em,  400,  normal); }
+@mixin font-sans-m    { @include font-style($font-sans,    14px,  14px,  14px,  14px,  14px,   0,   1.2em,  400,  normal); }
+@mixin font-sans-s    { @include font-style($font-sans,    12px,  11px,  11px,  11px,  11px,   0,   1.3em,  400,  normal); }
 
+.font-serif-xl   { @include font-serif-xl; }
 .font-serif-l    { @include font-serif-l; }
 .font-serif-m    { @include font-serif-m; }
 .font-sans-l     { @include font-sans-l; }
