--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -4,10 +4,17 @@
 // Fonts
 // ------------------------------------------------------------------------
 
-// @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@600;700&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap');
+
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&text=%E2%86%90|%E2%86%92');
+// @font-face {
+//   font-family: Work Sans;
+//   font-weight: 500;
+//   src: url("../fonts/work-sans/WorkSans-Medium.ttf") format("truetype");
+// }
+
 
 @font-face {
   font-family: Sabon;
