--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -614,6 +614,10 @@ section.footer-2 {
   }
 }
 
+.markdown {
+  p { margin: 5px 0; }
+}
+
 // ------------------------------------------------------------------------
 // BOOTSTRAP BREAKPOINTS
 // ------------------------------------------------------------------------
